--- a/hifi-app/index.html
+++ b/hifi-app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="stylesheet" href="/css/hifi-app.css">
+    <link rel="stylesheet" href="../css/hifi-app.css">
     <link rel="stylesheet" href="../icons/all.min.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
             <p class="tex">Democratizing leadership training</p>
             <p class="text">for a <b>new generation of leaders</b></p>
             <a  class="button-register" href="#"><b>Register</b></a>
-            <a class="button-login" href="/hifi-app/login.html"><b>Login</b></a>
+            <a class="button-login" href="../hifi-app/login.html"><b>Login</b></a>
         </main>
 
     </section>
