--- a/hifi-app/login.html
+++ b/hifi-app/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/hifi-app.css">
+    <link rel="stylesheet" href="../css/hifi-app.css">
     <link rel="stylesheet" href="../icons/all.min.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <main id="main-login">
 
             <div class="back">
-                <a class="link" href="/hifi-app/index.html">
+                <a class="link" href="../hifi-app/index.html">
                     <i class="fa-solid fa-arrow-left-long"></i>
                 </a>
                 <h4 class="atras">LOGIN</h4>
@@ -38,7 +38,7 @@
             <div class="alin">
                 <a class="forgot" href="#">Forgot your password?</a>
             </div>
-            <a class="login-enter" href="/hifi-app/profile.html">LOGIN</a>
+            <a class="login-enter" href="../hifi-app/profile.html">LOGIN</a>
             <span class="line">
                 <hr>
                 <h3 class="or">Or</h3>
