--- a/hifi-app/profile.html
+++ b/hifi-app/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coach</title>
-    <link rel="stylesheet" href="/css/hifi-app.css">
+    <link rel="stylesheet" href="../css/hifi-app.css">
     <link rel="stylesheet" href="../icons/all.min.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         <main class="container">
             <nav class="coachh">
                 <div class="vuelta">
-                   <a href="/hifi-app/login.html"><i class="fa-solid fa-arrow-left-long"></i></a>
+                   <a href="../hifi-app/login.html"><i class="fa-solid fa-arrow-left-long"></i></a>
                    <h4 class="co">COACH</h4>
                </div>
                <div class="foto">
@@ -24,7 +24,7 @@
             <article class="perfil">
                 <img class="musk" src="../imagenes/elon-musk.jpg" alt="">
                 <h3 class="elo">Elon Musk</h3>
-                <div class="bandera"><img src="/imagenes/bandera.png" alt=""><p>South Africa</p></div>
+                <div class="bandera"><img src="../imagenes/bandera.png" alt=""><p>South Africa</p></div>
             </article>
             <span class="rango">
                 <div class="one">
