--- a/users-full.html
+++ b/users-full.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users full</title>
     <link rel="stylesheet" href="../icons/all.min.css">
-    <link rel="stylesheet" href="/css/users-full.css">
+    <link rel="stylesheet" href="./css/users-full.css">
 </head>
 <body>
 
